Update TOC label

--- a/support/power-platform/power-apps/toc.yml
+++ b/support/power-platform/power-apps/toc.yml
@@ -2,7 +2,7 @@
   href: welcome-power-apps.yml
 - name: Canvas App Performance
   items:
-    - name: Troubleshoot Power Apps canvas app performance issues
+    - name: Troubleshoot canvas app performance issues
       href: canvas-app-performance/troubleshoot-perf-table.md
 - name: Connections
   items:
