--- a/support/azure/azure-kubernetes/toc.yml
+++ b/support/azure/azure-kubernetes/toc.yml
@@ -366,3 +366,6 @@
       href: error-codes/vmextensionerror-k8sapiserverconnfail.md
     - name: VMExtensionError_K8SAPIServerDNSLookupFail error
       href: error-codes/vmextensionerror-k8sapiserverdnslookupfail.md
+    - name: VMExtensionError_K8SAPIServerDNSLookupFail error
+  - name: UnsatisfiablePDB error
+    href: error-codes/unsatisfiablepdb.md
