--- a/support/developer/visualstudio/welcome-visual-studio.yml
+++ b/support/developer/visualstudio/welcome-visual-studio.yml
@@ -6,6 +6,7 @@ metadata:
   title: Visual Studio troubleshooting document
   description: Knowledge Base (KB) and other Support articles for Visual Studio. # Required; article description that is displayed in search results. < 160 chars.
   ms.topic: landing-page # Required
+  ms.service: visual-studio
   author: HaiyingYu  #Required; your GitHub user alias, with correct capitalization.
   ms.author: haiyingyu #Required; microsoft alias of author; optional team alias.
   ms.date: 05/09/2022
