--- a/support/azure/virtual-machines/linux/toc.yml
+++ b/support/azure/virtual-machines/linux/toc.yml
@@ -339,12 +339,16 @@
   - name: A Capacity Reservation is in a "Failed" provisioning state
     href: ../windows/capacity-reservation-failed-provisioning-state.md?context=/troubleshoot/azure/virtual-machines/linux/context/context
 
-- name: Azure Disk Encryption (ADE) not operating correctly
+- name: Azure Disk Encryption (ADE) for Linux
   items:
   - name: Overview
     href: /azure/virtual-machines/linux/disk-encryption-overview?context=/troubleshoot/azure/virtual-machines/linux/context/context
-  - name: Troubleshoot
+  - name: General troubleshooting guide
     href: /azure/virtual-machines/linux/disk-encryption-troubleshooting?context=/troubleshoot/azure/virtual-machines/linux/context/context
+  - name: Unlock the encrypted disk for offline repair
+    href: unlock-encrypted-linux-disk-offline-repair.md
+  - name: How to display encription settings with resource explorer
+    href: /azure/virtual-machines/linux/how-to-display-encryption-settings-with-azure-resource-explorer.md
   - name: FAQ
     href: /azure/virtual-machines/linux/disk-encryption-faq?context=/troubleshoot/azure/virtual-machines/linux/context/context
 
@@ -358,8 +362,6 @@
     href: repair-linux-vm-using-azure-virtual-machine-repair-commands.md
   - name: Azure Linux Auto Repair
     href: repair-linux-vm-using-ALAR.md
-  - name: Unlock the encrypted disk for offline repair
-    href: unlock-encrypted-linux-disk-offline-repair.md
   - name: Troubleshoot chroot environment for Linux rescue VM
     href: chroot-environment-linux.md
   - name: Redeploy Linux virtual machine to new Azure node
