--- a/support/sql/releases/toc.yml
+++ b/support/sql/releases/toc.yml
@@ -105,6 +105,10 @@ items:
   items:
   - name: SQL Server 2019 build versions
     href: sqlserver-2019/build-versions.md
+  - name: Cumulative Update 31
+    items:
+    - name: Cumulative Update 31 (KB5049296)
+      href: sqlserver-2019/cumulativeupdate31.md
   - name: Cumulative Update 30
     items:
     - name: Cumulative Update 30 (KB5049235)
