Process Termination Crash

--- a/support/developer/webapps/iis/toc.yml
+++ b/support/developer/webapps/iis/toc.yml
@@ -152,6 +152,8 @@ items:
     href: site-behavior-performance/http-500-response-binarywrite.md
   - name: Internet printing fails
     href: site-behavior-performance/internet-printing-fails.md
+  - name: Process termination crash
+    href: site-behavior-performance/process-termination-crash.md
   - name: Troubleshoot HTTP 400 errors in IIS
     href: site-behavior-performance/troubleshoot-http-400-errors-in-iis.md
   - name: Troubleshoot HTTP 502.2 Bad Gateway error in CGI apps
