--- a/support/windows-365/toc.yml
+++ b/support/windows-365/toc.yml
@@ -21,6 +21,8 @@ items:
   href: ./troubleshoot-windows-365-boot.md
 - name: Windows 365 Boot known issues
   href: ./windows-365-boot-known-issues.md
+- name: Troubleshoot Windows 365 Enterprise Cloud PCs grace period issue
+  href: ./troubleshoot-windows-365-enterprise-cloud-pcs-grace-period-issue.md
 - name: Windows 365 setup issues
   href: ./troubleshoot-windows-365-business.md
 - name: Windows 365 Switch known issues
