--- a/support/windows-server/toc.yml
+++ b/support/windows-server/toc.yml
@@ -2239,6 +2239,8 @@ items:
       href: ./remote/license-attributes-not-updated-rdsh-server.md
     - name: '"Licenses are not available for this Remote Desktop" error in Licensing Diagnosis'
       href: ./remote/rdsh-administrator-on-get-error-licensing-diagnosis.md
+    - name: Remote Desktop licensing mode is not configured warning
+      href: ./remote/remote-desktop-licensing-mode-not-configured-warning.md
     - name: Remote Desktop Licensing Service doesn't start
       href: ./remote/remote-desktop-licensing-service-not-star.md
     - name: Remote session disconnected when using non-persistent VDI with per-user licensing
