AB#3607: Create a new article

--- a/support/entra/entra-id/toc.yml
+++ b/support/entra/entra-id/toc.yml
@@ -51,6 +51,8 @@
     items:
       - name: IDX10501 Error in ASP.NET Core with Azure B2C Custom Policy
         href: app-integration/troubleshoot-error-idx10501-aspnet-b2c.md
+      - name: Authentication doesn't work after Android app is published to Google Play Store
+        href: app-integration/authentication-fails-after-publishing-app-to-google-play-store.md
 
   - name: Troubleshoot adding apps
     href: app-integration/troubleshoot-adding-apps.md
