Added ERR_VHD_FILE_NOT_FOUND error code in the new error code section

--- a/support/azure/azure-kubernetes/toc.yml
+++ b/support/azure/azure-kubernetes/toc.yml
@@ -369,3 +369,5 @@
     - name: VMExtensionError_K8SAPIServerDNSLookupFail error
   - name: UnsatisfiablePDB error
     href: error-codes/unsatisfiablepdb-error.md
+  - name: ERR_VHD_FILE_NOT_FOUND error
+    href: error-codes/err-vhd-file-not-found.md
