--- a/support/windows-client/toc.yml
+++ b/support/windows-client/toc.yml
@@ -1118,7 +1118,7 @@ items:
     - name: Windows Hello errors during PIN creation in Windows 10
       href: ./user-profiles-and-logon/windows-hello-errors-during-pin-creation-in-windows-10.md
     - name: Retrieve certificate to troubleshoot Windows Hello for Business logon failures
-      href: retrieve-certificate-to-troubleshoot-windows-hello-for-business.md
+      href: ./user-profiles-and-logon/retrieve-certificate-to-troubleshoot-windows-hello-for-business.md
 - name: Virtualization
   items:
   - name: Virtualization
