--- a/support/windows-server/toc.yml
+++ b/support/windows-server/toc.yml
@@ -3120,7 +3120,7 @@ items:
     - name: Scripts to retrieve profile age and optionally delete aged copies
       href: ./support-tools/scripts-retrieve-profile-age-delete-aged-copies.md
     - name: Scripts to view the certificate information in the msDS-KeyCredentialLink attribute
-      href: script-to-view-msds-keycredentiallink-attribute-value.md
+      href: ./support-tools/script-to-view-msds-keycredentiallink-attribute-value.md
   - name: TroubleShootingScript toolset (TSS)
     items:
     - name: Introduction to TroubleShootingScript toolset (TSS)
