--- a/support/developer/webapps/iis/toc.yml
+++ b/support/developer/webapps/iis/toc.yml
@@ -156,6 +156,8 @@ items:
     items:
     - name: Troubleshoot 4xx and 5xx HTTP errors
       href: site-behavior-performance/troubleshoot-http-error-code.md
+  - name: Troubleshoot high CPU usage in an IIS app pool
+    href: site-behavior-performance/troubleshoot-high-cpu-in-iis-app-pool.md
   - name: Troubleshoot HTTP 400 errors in IIS
     href: site-behavior-performance/troubleshoot-http-400-errors-in-iis.md
   - name: Troubleshoot HTTP 502.2 Bad Gateway error in CGI apps
