--- a/support/developer/webapps/iis/toc.yml
+++ b/support/developer/webapps/iis/toc.yml
@@ -152,6 +152,8 @@ items:
     href: site-behavior-performance/http-500-response-binarywrite.md
   - name: Internet printing fails
     href: site-behavior-performance/internet-printing-fails.md
+  - name: Process termination crash 
+    href: site-behavior-performance/process-termination-crash.md 
   - name: Runtime errors and exceptions
     items:
     - name: Troubleshoot 4xx and 5xx HTTP errors
