minor updates to title and heading

--- a/support/developer/webapps/iis/toc.yml
+++ b/support/developer/webapps/iis/toc.yml
@@ -163,7 +163,7 @@ items:
     href: site-behavior-performance/troubleshoot-http-400-errors-in-iis.md
   - name: Troubleshoot HTTP 502.2 Bad Gateway error in CGI apps
     href: site-behavior-performance/troubleshoot-502-2-bad-gateway-error-in-cgi-apps.md
-  - name: Troubleshoot process termination crash 
+  - name: Troubleshoot a process crash 
     href: site-behavior-performance/process-termination-crash.md
   - name: Worker Process takes much memory
     href: site-behavior-performance/work-process-takes-much-memory.md
