--- a/support/power-platform/power-automate/toc.yml
+++ b/support/power-platform/power-automate/toc.yml
@@ -48,34 +48,30 @@
       href: dataverse-cds/cds-user-cannot-access-power-automate-business-process-flows-on-demand-workflows.md
 - name: Desktop flows
   items:
-    - name: PAD UI automation
+    - name: UI automation
       items:
-        - name: UI automation in SAP
-          items:
-            - name: SAP UI element click issue
-              href: desktop-flows/pad-ui-automation/ui-sap-automation/sap-click-element-dpi.md
-        - name: UI automation in virtual desktops (RDP/Citrix)
-          items:
-            - name: Error is shown when hovering on Remote App-Desktop
-              href: desktop-flows/pad-ui-automation/ui-rdp-automation/rdp-no-highlight.md
-        - name: Browser automation
-          items:
-            - name: Web Automation fails when Machine Runtime and MSIX PAD versions are not synced
-              href: desktop-flows//pad-ui-automation/browser-automation/machine-runtime-msix-errors.md
-    - name: SAP actions
+        - name: No element highlighted or error occurs when hovering over a UI or web element
+          href: desktop-flows/ui-automation/ui-rdp-automation/rdp-no-highlight.md
+        - name: SAP UI element click issue
+          href: desktop-flows/ui-automation/ui-sap-automation/sap-click-element-dpi.md
+    - name: Browser automation
       items:
-        - name: Error when launching SAP
-          href: desktop-flows/sap-actions/scripting-permissions-launch-sap.md
-    - name: Office actions
+        - name: Web automation fails when machine runtime and MSIX versions are different
+          href: desktop-flows/browser-automation/machine-runtime-msix-errors.md
+    - name: SAP automation
+      items:
+        - name: Can't open SAP
+          href: desktop-flows/sap-automation/scripting-permissions-launch-sap.md
+    - name: Office automation
       items:
         - name: Excel
           items:
-            - name: Launch Excel action failures
-              href: desktop-flows/office/excel/launch-excel-action-failures.md
+            - name: Launch Excel action errors
+              href: desktop-flows/office-automation/excel/launch-excel-action-failures.md
         - name: Outlook
           items:
-            - name: Outlook retrieve emails filtering issues
-              href: desktop-flows/office/outlook/retrieve-emails-filtering.md
+            - name: The Retrieve email messages from Outlook action doesn't work as expected
+              href: desktop-flows/office-automation/outlook/retrieve-emails-filtering.md
     - name: A desktop application crashes due to UI automation
       href: desktop-flows/desktop-application-crashes-ui-automation.md
     - name: '"Could not read the application certificate" error when creating a connection'
