--- a/support/developer/webapps/iis/toc.yml
+++ b/support/developer/webapps/iis/toc.yml
@@ -163,6 +163,8 @@ items:
     href: site-behavior-performance/troubleshoot-http-400-errors-in-iis.md
   - name: Troubleshoot HTTP 502.2 Bad Gateway error in CGI apps
     href: site-behavior-performance/troubleshoot-502-2-bad-gateway-error-in-cgi-apps.md
+  - name: Troubleshoot slow page response and hangs
+    href: site-behavior-performance/slow-page-response-hangs.md
   - name: Worker Process takes much memory
     href: site-behavior-performance/work-process-takes-much-memory.md
 
