--- a/support/windows/win32/toc.yml
+++ b/support/windows/win32/toc.yml
@@ -11,7 +11,7 @@
       href: coinitializeex-fails-after-calling-htmlhelp-same-thread.md
     - name: COM+ supports automatic collection of process dump file
       href: com-supports-collect-dump-file.md 
-    - name: UMDH in Windows 11 SDK doesn't work fine
+    - name: The UMDH tool generates warnings
       href: umdh-windows-11-sdk-not-work-fine.md
   - name: Desktop app UI development
     items:
