--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -18,6 +18,38 @@
       href: dataverse-web-api-and-sdk/dataverse-records-missing-required-fields.md
     - name: Web API client errors
       href: dataverse-web-api-and-sdk/web-api-client-errors.md
+- name: Dynamics 365 App for Outlook
+  items:
+    - name: App for Outlook doesn't appear within Outlook
+      href: d365-app-outlook/app-does-not-appear-within-outlook.md
+    - name: Can't load this app because email account isn't configured
+      href: d365-app-outlook/we-cannot-load-this-app.md
+    - name: Error when installing CRM 2016 for Outlook
+      href: d365-app-outlook/error-when-installing-crm-2016-outlook.md
+    - name: Errors when opening App for Outlook
+      href: d365-app-outlook/errors-when-opening-365-app-outlook.md
+    - name: Experience without Server-Side Synchronization
+      href: d365-app-outlook/experience-without-server-side-synchronization.md
+    - name: New Forms are formatted incorrectly or don't appear
+      href: d365-app-outlook/new-forms-formatted-incorrectly.md
+    - name: Something went wrong during sign-in when accessing App for Outlook
+      href: d365-app-outlook/something-went-wrong-during-sign.md
+    - name: Something went wrong during sign-in when using App for Outlook
+      href: d365-app-outlook/something-went-wrong-during-sign-in.md
+    - name: The authentication was not successful
+      href: d365-app-outlook/the-authentication-was-not-successful.md
+    - name: The given key wasn't present in the dictionary
+      href: d365-app-outlook/the-given-key-was-not-present-in-dictionary.md
+    - name: This organization has already been configured
+      href: d365-app-outlook/this-organization-has-already-been-configured-error-when-connecting.md
+    - name: Track and Set Regarding options are missing
+      href: d365-app-outlook/track-set-regarding-options-miss.md
+    - name: Troubleshoot App for Outlook
+      href: d365-app-outlook/troubleshoot-dynamics-365-app-outlook.md
+    - name: User role doesn't have required permissions
+      href: d365-app-outlook/current-user-role-not-have-required-permissions.md
+    - name: Your device is currently unsupported
+      href: d365-app-outlook/your-device-is-currently-unsupported.md
 - name: Environment and app access issues
   items:
     - name: Troubleshoot user access issues for different environments
