--- a/support/power-platform/power-automate/toc.yml
+++ b/support/power-platform/power-automate/toc.yml
@@ -50,7 +50,7 @@
   items:
     - name: UI automation
       items:
-        - name: No element highlighted or error occurs when hovering over a UI or web element
+        - name: UI element highlight or hovering issues in virtual desktop
           href: desktop-flows/ui-automation/ui-rdp-automation/rdp-no-highlight.md
         - name: SAP UI element click issue
           href: desktop-flows/ui-automation/ui-sap-automation/sap-click-element-dpi.md
