--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -21,7 +21,7 @@
 - name: Dynamics 365 App for Outlook
   items:
     - name: Authentication pop-up is blank and unable to sign in
-      jref: d365-app-outlook/dynamics-app-for-outlook-authentication-pop-up-blank-cannot-proceed.md
+      href: d365-app-outlook/dynamics-app-for-outlook-authentication-pop-up-blank-cannot-proceed.md
     - name: App for Outlook doesn't appear within Outlook
       href: d365-app-outlook/app-does-not-appear-within-outlook.md
     - name: Can't load this app because email account isn't configured
