--- a/support/entra/entra-id/toc.yml
+++ b/support/entra/entra-id/toc.yml
@@ -53,6 +53,8 @@
         href: app-integration/troubleshoot-error-idx10501-aspnet-b2c.md
       - name: WIF10201 No valid key mapping found
         href: app-integration/troubleshoot-wif10201-no-validkey-securitytoken-mvc.md
+      - name: Package Inspector for MSAL Android Native
+        href: app-integration/package-inspector-msal-android-native.md
 
   - name: Troubleshoot adding apps
     href: app-integration/troubleshoot-adding-apps.md
