--- a/support/windows-server/backup-and-storage/guid-partitioning-table-disk-faq.yml
+++ b/support/windows-server/backup-and-storage/guid-partitioning-table-disk-faq.yml
@@ -1,3 +1,4 @@
+### YamlMime:FAQ
 metadata:
   title: FAQs about GUID Partitioning Table disk
   description: Provides a list of frequently asked questions about the GUID Partition Table disk architecture.
