--- a/support/developer/webapps/iis/toc.yml
+++ b/support/developer/webapps/iis/toc.yml
@@ -101,12 +101,10 @@ items:
 
 - name: Site behavior and performance
   items:
-  - name: Access is denied when you call web services
-    href: site-behavior-performance/access-denied-call-web-service.md
   - name: Authorization for requests to default document fails
     href: site-behavior-performance/authorization-fails-default-documents.md
-  - name: Data collection strategies of Web Server issues
-    href: site-behavior-performance/data-collection-strategies.md
+  - name: FtpPutFile always returns success
+    href: site-behavior-performance/ftpputfile-success-451-status.md
   - name: High memory usage
     items:
     - name: High memory consumption issue overview
@@ -115,28 +113,30 @@ items:
       href: site-behavior-performance/data-capture-managed-memory-leak.md
     - name: Native memory leak in an IIS 7.x application pool
       href: site-behavior-performance/troubleshoot-native-memory-leak-iis-7x-application-pool.md
-  - name: FtpPutFile always returns success
-    href: site-behavior-performance/ftpputfile-success-451-status.md
-  - name: Internet printing fails
-    href: site-behavior-performance/internet-printing-fails.md
+    - name: Worker Process takes much memory
+      href: site-behavior-performance/work-process-takes-much-memory.md
   - name: Runtime errors and exceptions
     items:
     - name: Troubleshoot 4xx and 5xx HTTP errors
       href: site-behavior-performance/troubleshoot-http-error-code.md
-    - name: HTTP 400 errors in IIS
+    - name: Data collection strategies of Web Server issues
+      href: site-behavior-performance/data-collection-strategies.md
+    - name: HTTP error 400 in IIS
       href: site-behavior-performance/troubleshoot-http-400-errors-in-iis.md
     - name: HTTP error 400 in the CLM portal
       href: site-behavior-performance/clm-http-bad-request.md
+    - name: HTTP error 401 Access Denied
+      href: site-behavior-performance/access-denied-call-web-service.md
     - name: HTTP error 401.1 with pre-authentication headers
       href: site-behavior-performance/401-error-preauthentication-header.md
     - name: HTTP error 404.2
       href: site-behavior-performance/http-error-402-webpage.md
     - name: HTTP error 403.6 when you open IIS webpage
       href: site-behavior-performance/403-6-forbidden-error.md
-    - name: HTTP error 403.7 when you run applications
-      href: site-behavior-performance/http-error-403-7-forbidden-web-app.md
     - name: HTTP error 403.7 when you open an IIS webpage
       href: site-behavior-performance/http-403-forbidden-open-webpage.md
+    - name: HTTP error 403.7 when you run applications
+      href: site-behavior-performance/http-error-403-7-forbidden-web-app.md
     - name: HTTP error 403.14
       href: site-behavior-performance/http-403-14-forbidden-webpage.md
     - name: HTTP error 403.16
@@ -147,6 +147,8 @@ items:
       href: site-behavior-performance/hidden-static-files-http-404-access-denied.md
     - name: HTTP error 404.13
       href: site-behavior-performance/http-404-13-website.md
+    - name: HTTP error 404.13 Internet printing fails
+      href: site-behavior-performance/internet-printing-fails.md
     - name: HTTP error 404.17 when you visit a Web site
       href: site-behavior-performance/error-message-you-visit-web-site.md
     - name: HTTP error 405.0
@@ -163,8 +165,6 @@ items:
       href: site-behavior-performance/troubleshoot-502-2-bad-gateway-error-in-cgi-apps.md
   - name: Troubleshoot high CPU usage in an IIS app pool
     href: site-behavior-performance/troubleshoot-high-cpu-in-iis-app-pool.md
-  - name: Worker Process takes much memory
-    href: site-behavior-performance/work-process-takes-much-memory.md
 
 - name: WAS Service and Svchost Process Operation
   items:
