--- a/support/azure/azure-kubernetes/toc.yml
+++ b/support/azure/azure-kubernetes/toc.yml
@@ -366,7 +366,8 @@
       href: error-codes/vmextensionerror-k8sapiserverconnfail.md
     - name: VMExtensionError_K8SAPIServerDNSLookupFail error
       href: error-codes/vmextensionerror-k8sapiserverdnslookupfail.md
+    - name: VMExtensionError_VHDFileNotFound error
+      href: error-codes/vmextensionerror-vhdfilenotfound.md
   - name: UnsatisfiablePDB error
     href: error-codes/unsatisfiablepdb-error.md
-  - name: ERR_VHD_FILE_NOT_FOUND error
-    href: error-codes/vhdfilenotfound.md
+  
