--- a/support/azure/virtual-machines/linux/toc.yml
+++ b/support/azure/virtual-machines/linux/toc.yml
@@ -181,6 +181,8 @@
     href: linux-no-boot-dracut.md
   - name: VM fails to boot due to incorrect HugePages configuration
     href: linux-vm-no-boot-incorrect-hugepages-configuration.md
+  - name: Troubleshooting LIS driver issues on Linux Virtual Machines
+    href: troubleshooting-lis-driver-issues-in-linux-virtual-machines.md
           
 
 - name: Cannot start or stop my VM
