--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -42,7 +42,7 @@
       href: d365-app-outlook/emails-tracked-by-dynamics-365-app-for-outlook-show-track-pending.md
     - name: Error in App for Outlook
       href: d365-app-outlook/error-when-opening-365-app-outlook.md
-    - name: Errors when opening App for Outlook
+    - name: Errors when opening Dynamics 365 App for Outlook
       href: d365-app-outlook/errors-when-opening-365-app-outlook.md
     - name: Experience without Server-Side Synchronization
       href: d365-app-outlook/experience-without-server-side-synchronization.md
