--- a/support/developer/webapps/iis/toc.yml
+++ b/support/developer/webapps/iis/toc.yml
@@ -163,6 +163,8 @@ items:
       href: site-behavior-performance/http-error-501-not-implemented.md
     - name: HTTP error 502.2 Bad Gateway error in CGI apps
       href: site-behavior-performance/troubleshoot-502-2-bad-gateway-error-in-cgi-apps.md
+  - name: Troubleshoot a process crash in an IIS app pool
+    href: site-behavior-performance/process-termination-crash.md
   - name: Troubleshoot high CPU usage in an IIS app pool
     href: site-behavior-performance/troubleshoot-high-cpu-in-iis-app-pool.md
 
