--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -36,12 +36,8 @@
       href: d365-app-outlook/trying-to-access-dynamics-365-app-for-outlook-from-email-do-not-recognize-error.md
     - name: Can't connect to Exchange message
       href: d365-app-outlook/cannot-connect-to-exchange-message-when-using-dynamics-365-app-for-outlook.md
-    - name: Can't load this app because email account isn't configured
-      href: d365-app-outlook/we-cannot-load-this-app.md
     - name: Email or appointment tracked by App for Outlook shows as Track pending
       href: d365-app-outlook/emails-tracked-by-dynamics-365-app-for-outlook-show-track-pending.md
-    - name: Error in App for Outlook
-      href: d365-app-outlook/error-when-opening-365-app-outlook.md
     - name: Errors when opening App for Outlook
       href: d365-app-outlook/errors-when-opening-365-app-outlook.md
     - name: Experience without Server-Side Synchronization
@@ -68,6 +64,8 @@
       href: d365-app-outlook/current-user-role-not-have-required-permissions.md
     - name: We're unable to connect to your server
       href: d365-app-outlook/we-are-unable-to-connect-to-your-dynamics-365-app-for-outlook-error.md
+    - name: We can't load this app error when opening Dynamics 365 App for Outlook
+      href: d365-app-outlook/error-when-opening-365-app-outlook.md
     - name: You don't have required role or privilege
       href: d365-app-outlook/you-do-not-have-required-role-privilege.md
     - name: You don't have the required role or privilege to complete this action
