--- a/support/azure/azure-kubernetes/create-upgrade-delete/aks-common-issues-faq.yml
+++ b/support/azure/azure-kubernetes/create-upgrade-delete/aks-common-issues-faq.yml
@@ -4,7 +4,7 @@ metadata:
   description: Review a list of frequently asked questions (FAQ) about common issues when you're working with an Azure Kubernetes Service (AKS) cluster.
   ms.topic: faq
   ms.date: 03/04/2025
-  ms.reviewer: chiragpa, nickoman, ffidelis, v-leedennis, v-weizhu
+  ms.reviewer: chiragpa, nickoman, v-leedennis, v-weizhu
   ms.service: azure-kubernetes-service
   ms.custom: sap:Create, Upgrade, Scale and Delete operations (cluster or nodepool)
 
