Updates from editor

--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -52,7 +52,7 @@
       href: d365-app-outlook/error-install-dynamics-365-app-outlook.md
     - name: Item level Server-Side Synchronization issues
       href: d365-app-outlook/troubleshoot-item-level-server-side-synchronization-issues.md
-    - name: Privilege error when using App for Outlook
+    - name: Privilege or permission error when using Dynamics 365 App for Outlook
       href: d365-app-outlook/privilege-error-occurs-when-using-dynamics-365-app-for-outlook.md
     - name: Something went wrong during sign-in when accessing App for Outlook
       href: d365-app-outlook/something-went-wrong-during-sign.md
