--- a/Exchange/ExchangeOnline/onlinetoc/toc.yml
+++ b/Exchange/ExchangeOnline/onlinetoc/toc.yml
@@ -81,7 +81,7 @@
           href: ../administration/how-to-use-powershell-to-grant-admin-access-to-all-mailboxes.md
         - name: Imported PST file content hidden in archive mailbox
           href: ../administration/imported-pst-file-content-hidden-in-archive-mailbox.md
-        - name: Inactive mailbox doesn't reconnect automatically to AD 
+        - name: Original mailbox isn't reconnected after syncing resumes
           href: ../administration/reconnect-inactive-or-soft-deleted-mailboxes-to-ad.md
         - name: InvalidShellID error in Remote PowerShell
           href: ../administration/invalidshellid-error-in-rps.md
