reslve the warning

--- a/support/dynamics-365/supply-chain/toc.yml
+++ b/support/dynamics-365/supply-chain/toc.yml
@@ -352,7 +352,7 @@
       href: warehousing/shipment-confirmed-no-posting.md
     - name: Slotting templates don't consider on-hand inventory for batch-above items
       href: warehousing/slotting-templates-inventory-batch-above.md
-    - name: '"The size of the request xml exceeds the maximum allowed value" in the mobile app'
+    - name: '"The size of the request xml exceeds the maximum allowed value" error in the mobile app'
       href: warehousing/the-size-of-the-request-xml-exceeds-the-maximum-allowed-value-error-in-the-warehouse-management-mobile-app.md
     - name: The last closed work line must be a put
       href: warehousing/the-last-closed-work-link-must-be-a-put-error.md
