--- a/support/power-platform/power-apps/toc.yml
+++ b/support/power-platform/power-apps/toc.yml
@@ -14,39 +14,37 @@
       href: ../power-automate/connections/troubleshoot-broken-connections.md?context=/troubleshoot/power-platform/power-apps/context/context
     - name: Troubleshoot Power Query
       href: connections/troubleshoot-power-query-issues.md
-- name: Create and use apps
+- name: Canvas apps
   items:
     - name: Common issues and resolutions
       href: create-and-use-apps/common-issues-and-resolutions.md
     - name: General Power Apps debugging strategies
       href: create-and-use-apps/isolate-common-issues.md
-    - name: Canvas apps
-      items:
-        - name: Custom pages and SDK script don't load
-          href: create-and-use-apps/custom-pages-sdk-script-not-load.md
-        - name: Filter expression returns extra blank records in results
-          href: create-and-use-apps/filter-blank-records.md
-        - name: How to create a minimal repro canvas app
-          href: create-and-use-apps/minimal-canvas-app-repro.md
-        - name: Isolate issues in canvas apps
-          href: create-and-use-apps/isolate-canvas-app-issues.md
-        - name: Troubleshoot date and time issues in canvas apps
-          href: create-and-use-apps/troubleshoot-canvas-app-date-time-issues.md
-    - name: Model-driven apps
-      items:
+    - name: Isolate issues in canvas apps
+      href: create-and-use-apps/isolate-canvas-app-issues.md
+    - name: How to create a minimal repro canvas app
+      href: create-and-use-apps/minimal-canvas-app-repro.md
+    - name: Date and time issues in canvas apps
+      href: create-and-use-apps/troubleshoot-canvas-app-date-time-issues.md
+    - name: Custom pages and SDK script don't load
+      href: create-and-use-apps/custom-pages-sdk-script-not-load.md
+    - name: Filter expression returns extra blank records in results
+      href: create-and-use-apps/filter-blank-records.md
+- name: Model-driven apps
+  items:
         - name: How to create a vanilla repro model-driven app
           href: create-and-use-apps/vanilla-model-driven-app-repro.md
         - name: Isolate issues in model-driven apps
           href: create-and-use-apps/isolate-model-app-issues.md
+        - name: Date and time issues in model-driven apps
+          href: create-and-use-apps/troubleshoot-model-driven-app-date-time-issues.md
+        - name: Lookup issues in model-driven apps
+          href: create-and-use-apps/troubleshoot-model-driven-app-lookup-issues.md
         - name: Lookup doesn't filter records for particular entity
           href: create-and-use-apps/lookup-does-not-filter-entity-records.md
         - name: Refresh All doesn't work after exporting app data to a dynamic worksheet
           href: create-and-use-apps/export-dynamic-worksheet-refresh-all.md
-        - name: Troubleshoot date and time issues in model-driven apps
-          href: create-and-use-apps/troubleshoot-model-driven-app-date-time-issues.md
-        - name: Troubleshoot Lookup issues in model-driven apps
-          href: create-and-use-apps/troubleshoot-model-driven-app-lookup-issues.md
-        - name: Troubleshoot View issues in model-driven apps
+        - name: View issues in model-driven apps
           href: create-and-use-apps/troubleshoot-model-driven-app-view-issues.md
         - name: Grid control
           items:
@@ -92,14 +90,14 @@
               href: create-and-use-apps/remove-an-unmanaged-layer-for-ribbon.md
             - name: Regenerate ribbon metadata
               href: create-and-use-apps/regenerate-ribbon-metadata.md
-    - name: Unified Interface
-      items:
-        - name: '"Blocked a frame with origin" error'
-          href: create-and-use-apps/blocked-frame-with-origin-uci.md
-        - name: Cookies or pop-up blocker errors
-          href: create-and-use-apps/cookies-pop-up-blocker-error.md
-        - name: No response with back button
-          href: create-and-use-apps/no-navigation-when-selecting-button.md
+      - name: Unified Interface
+        items:
+            - name: '"Blocked a frame with origin" error'
+              href: create-and-use-apps/blocked-frame-with-origin-uci.md
+            - name: Cookies or pop-up blocker errors
+              href: create-and-use-apps/cookies-pop-up-blocker-error.md
+            - name: No response with back button
+              href: create-and-use-apps/no-navigation-when-selecting-button.md
 - name: Integrate other products in model-driven apps
   items:
     - name: Troubleshooting Word templates
