--- a/support/sql/toc.yml
+++ b/support/sql/toc.yml
@@ -9,8 +9,9 @@ items:
 
 - name: Azure SQL Virtual Machine
   items:
+  - name: SQL Server installation fails on some Azure VMs
   - name: FCI installation fails with error on Azure VM
-    href: azure-sql/fci-installation-fails-error-azure-vm.md
+    href: azure-sql/sql-installation-fails-error-azure-vm.md
 
 - name: Data Quality Services (DQS)
   items:
