--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -23,7 +23,7 @@
       href: ./teams-sign-in/resolve-new-teams-launch-issues.md
     - name: Resolve new Teams installation issues
       href: ./teams-administration/fix-new-teams-installation-issues.md
-    - name: "Root cause undetermined" for Teams client update
+    - name: '"Root cause undetermined" for Teams client update failure'
       href: ./teams-administration/root-cause-undetermined-teams-update-failure.md  
     - name: Self-help diagnostics for Teams admins
       href: ./teams-administration/admin-self-help-diagnostics.md
