--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -15,7 +15,7 @@
       href: ./teams-administration/disable-sharepoint-news-notifications.md
     - name: Error switching a tenant to Teams Only mode
       href: ./teams-administration/cannot-switch-to-teams-only-mode.md
-    - name: Include or exclude Teams from antivirus or DLP applications
+    - name: Prevent antivirus and DLP tools from blocking or crashing Microsoft Teams
       href: ./teams-administration/include-exclude-teams-from-antivirus-dlp.md
     - name: Issues receiving messages and calls
       href: /microsoftteams/legacy-login-issues?context=/MicrosoftTeams/troubleshoot/context/context
